# karka_kasadara

./: .gitignore  DEEP_DIVE_NOTES.txt  README.md  agent.py  app.py  chunks.json  dataset.txt  ingest.py  main.py  pyproject.toml  rag.py  requirements.txt
