[project]
name = "rag-project"
version = "0.1.0"
description = "RAG system with LangGraph agents and FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "sentence-transformers==3.0.1",
    "faiss-cpu==1.8.0",
    "langgraph==0.2.28",
    "langchain==0.3.1",
    "langchain-core==0.3.6",
    "langchain-google-genai==2.0.0",
    "google-generativeai==0.7.2",
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "pydantic==2.9.2",
    "numpy==1.26.4",
    "python-dotenv==1.0.1",
]
